# banangrams-solver

./: .gitignore  Design.md  README.md  banana-dist.txt  banangrams-solver.opam  bisect333362268.coverage  dune  dune-project
_coverage/: index.html
_coverage/src/lib/: board.ml.html  tile.ml.html  word.ml.html
client/: package-lock.json  package.json  rescript.json
client/src/: App.res  App.res.mjs
demo/dream/: dune
demo/rescript/rescript-demo/: package-lock.json  package.json  rescript.json
server/: dune  server.ml
src/bananagram/: banana_gram.ml  banana_gram.mli  dune  solver.ml  solver.mli  validation.ml  validation.mli
src/lib/: board.ml  board.mli  dune  solver.ml  solver.mli  tile.ml  tile.mli  validation.ml  validation.mli  word.ml  word.mli
test/: dune  tests.ml
